crates/shipper-webhook/src/snapshots/shipper_webhook__tests__snapshot_edge_cases__config_default_all_fields.snap
---
source: crates/shipper-webhook/src/lib.rs
assertion_line: 2130
expression: config
---
WebhookConfig {
    url: "",
    webhook_type: Generic,
    secret: None,
    timeout_secs: 30,
}
