crates/shipper-webhook/src/snapshots/shipper_webhook__tests__snapshot_edge_cases__config_generic_with_secret.snap
---
source: crates/shipper-webhook/src/lib.rs
expression: config
---
WebhookConfig {
    url: "<redacted>",
    webhook_type: Generic,
    secret: Some(
        "<redacted>",
    ),
    timeout_secs: 15,
}
