crates/shipper-webhook/src/snapshots/shipper_webhook__tests__snapshot_edge_cases__config_minimal_timeout.snap
---
source: crates/shipper-webhook/src/lib.rs
expression: config
---
WebhookConfig {
    url: "<redacted>",
    webhook_type: Generic,
    secret: None,
    timeout_secs: 1,
}
