crates/shipper-webhook/src/snapshots/shipper_webhook__tests__snapshot_edge_cases__config_slack_no_secret.snap
---
source: crates/shipper-webhook/src/lib.rs
expression: config
---
WebhookConfig {
    url: "<redacted>",
    webhook_type: Slack,
    secret: None,
    timeout_secs: 30,
}
