crates/shipper-webhook/src/snapshots/shipper_webhook__tests__snapshot_edge_cases__discord_unicode_payload.snap
---
source: crates/shipper-webhook/src/lib.rs
assertion_line: 2211
expression: json
---
Object {
    "embeds": Array [
        Object {
            "color": Number(16711680),
            "description": String("🦀 Опубликовано"),
            "fields": Array [
                Object {
                    "inline": Bool(false),
                    "name": String("Error"),
                    "value": String("сетевая ошибка"),
                },
            ],
            "title": String("Shipper Notification"),
        },
    ],
}
